--- a/_posts/2014-07-14-project-3.markdown
+++ b/_posts/2014-07-14-project-3.markdown
@@ -1,12 +1,13 @@
 ---
 layout: default
-modal-id: 6
-date: 2014-07-15
-img: submarine.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
+modal-id: 3
+title: Participation on GitHub
+date: 2014-07-11
+img: github.png
+alt: github-participation-statistics
+project-date: 2 weeks/ spring 2015
+group: Fahria
+category: Empirical Research
 description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
 
 ---
