--- a/_posts/2014-07-11-project-1.markdown
+++ b/_posts/2014-07-11-project-1.markdown
@@ -1,13 +1,16 @@
 ---
 layout: default
 modal-id: 1
+class: wikimedia
+keywords: Gamification, User-centred Evaluations, Iterative Design, Axure, Prototyping
 title: Mobile App Design for Wikimedia
 date: 2014-07-14
 img: whiteboard2.jpg
 alt: whiteboard-sketches
-project-date: 10 weeks/ winter 2014
+project-length: 10 Weeks
+project-date: Winter 2014
 group: Marcel, Luis, Adam, Dennis
-category: Human-centred Design
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+focus: Human-centred Design
+description: <h3>The Challenge</h3><p>This project was a university group project which was developed in cooperation with <a href="https://www.wikimedia.org/">Wikimedia</a>. Wikimedia asked us to design a mobile application that would help to categorize the large number of uncategorized pictures in their <a href="https://commons.wikimedia.org/wiki/Category:Images">image database</a> in a fun way.  </p><h3>Team</h3><p>Our team consisted of five students with a diverse background in visual design, software development and marketing. Additionally we had gamers and non-gamers in our design team. My major contributions were researching gamification, creating a concept, evaluations and prototyping with Axure and HTML/Javascript/CSS.</p><h3>Research and Planning</h3><p></p><h3>Brainstorming Design</h3><p></p><h3>Paper Prototype</h3><p></p><h3>Screens Prototype</h3><p></p><h3>Axure/Javascript Prototype</h3><p></p>
 
 ---
