--- a/_posts/2014-07-13-project-2.markdown
+++ b/_posts/2014-07-13-project-2.markdown
@@ -2,12 +2,14 @@
 layout: default
 modal-id: 2
 title: Visualising World Bank Data
+class: arduino
 date: 2014-07-13
 img: arduino_large.jpg
 alt: arduino-setup
-project-date: 2 weeks / winter 2014
+project-length: 2 Weeks
+project-date: Winter 2014
 group: Just me
-category: Prototyping
+focus: Prototyping
 description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
 
 ---
