--- a/_posts/2014-07-14-project-3.markdown
+++ b/_posts/2014-07-14-project-3.markdown
@@ -1,13 +1,15 @@
 ---
 layout: default
 modal-id: 3
+class: github
 title: Participation on GitHub
 date: 2014-07-11
 img: github.png
 alt: github-participation-statistics
-project-date: 2 weeks/ spring 2015
+project-length: 2 Weeks
+project-date: Spring 2015
 group: Fahria
-category: Empirical Research
+focus: Empirical Research
 description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
 
 ---
