--- a/_posts/2014-07-11-project-1.markdown
+++ b/_posts/2014-07-11-project-1.markdown
@@ -11,6 +11,6 @@ project-length: 10 Weeks
 project-date: Winter 2014
 group: Marcel, Luis, Adam, Dennis
 focus: Human-centred Design
-description: <h3>The Challenge</h3><p>This project was a university group project which was developed in cooperation with <a href="https://www.wikimedia.org/">Wikimedia</a>. Wikimedia asked us to design a mobile application that would help to categorize the large number of uncategorized pictures in their <a href="https://commons.wikimedia.org/wiki/Category:Images">image database</a> in a fun way.  </p><h3>Team</h3><p>Our team consisted of five students with a diverse background in visual design, software development and marketing. Additionally we had gamers and non-gamers in our design team. My major contributions were researching gamification, creating a concept, evaluations and prototyping with Axure and HTML/Javascript/CSS.</p><h3>Research and Planning</h3><p></p><h3>Brainstorming Design</h3><p></p><h3>Paper Prototype</h3><p></p><h3>Screens Prototype</h3><p></p><h3>Axure/Javascript Prototype</h3><p></p>
+description: <h3>The Challenge</h3><p>This project was a university group project which was developed in cooperation with <a href="https://www.wikimedia.org/">Wikimedia</a>. Wikimedia asked us to design a mobile application that would help to categorize the large number of uncategorized pictures in their <a href="https://commons.wikimedia.org/wiki/Category:Images">image database</a> in a fun way.  </p><h3>Research and Planning</h3><p></p><h3>Brainstorming Design</h3><p></p><h3>Paper Prototype</h3><p></p><h3>Screens Prototype</h3><p></p><h3>Axure/Javascript Prototype</h3><p></p>
 
 ---
