--- a/_posts/2014-07-14-project-3.markdown
+++ b/_posts/2014-07-14-project-3.markdown
@@ -2,6 +2,8 @@
 layout: default
 modal-id: 3
 class: github
+role: Research, Questionnaire, Data Extraction and Analysis
+keywords: User Research, Questionnaire, Data Mining
 title: Participation on GitHub
 date: 2014-07-11
 img: github.png
@@ -10,6 +12,6 @@ project-length: 2 Weeks
 project-date: Spring 2015
 group: Fahria
 focus: Empirical Research
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+description: <h3>Challenge</h3><p>This university project was developed in a team of two. Our task was to do an empirical study about participation in social media.</p>
 
 ---
