--- a/_posts/2014-07-13-project-2.markdown
+++ b/_posts/2014-07-13-project-2.markdown
@@ -12,6 +12,6 @@ project-length: 2 Weeks
 project-date: Winter 2014
 group: Just me
 focus: Prototyping
-description: <h3>Challenge</h3><p>This project was an individual university project in which I worked with data from the <a href="http://www.worldbank.org/">World Bank</a>. The World Bank provides Open Data about the development of the world but the data is not very accessible and understandable. So the task was to focus on a certain aspect of the data, create a more accessible representation and also incorporate the ideas of embodied interaction.</p><h3>Concept</h3><p>I decided to design an artifact for a fictitious museum environment with a broader topic about for example water or Africa. My idea was to create a map that would show the percentage of people having access to water in rural areas for each country in Africa. As museums typically have a wide range of visitors, from small kids to seniors, the input device had to be very easy and intuitive to interact with. As the input device I therefore aimed to use a physical slider with which users would be able to navigate through each year and explore the development over time.</p><h3>Result</h3> <p>Unfortunatly I couldn't get a slider so I had to work with a turning knob instead. A quick demonstration of the result can be seen in the following video. </p><p> <div class="flex-video widescreen"><iframe src="https://www.youtube.com/embed/2jrZv-j7q3I" frameborder="0" allowfullscreen=""></iframe></div></p><p>A <a href="http://weidenfreak.github.io/InteractiveAfricaMapD3/"> live version</a> is also available but it doesn't have Arduino support and is optimised for Google Chrome only.</p><h3>Process</h3><p>The prototype was developed in several iterations. During the development I did small evaluations in which I led my users explore the prototype and encouraged them to give feedback. One minor finding was for example, that while using the turning knob the users lost the focus on the year range in the bottom. I therefore additionally included the current year above the map as shown in this screenshot:</p><img src="img/portfolio/africa_map.png" class="img-responsive img-thumbnail img-centered" alt="Africa_Map Screen"><p>Later on I found through the evaluations that people immediately started to try to identify which countries were constantly improving and which were not. In the chosen map visualisation this is hard to keep track of because of the large number of countries. A therefore useful improvement would have been to add for example a list with countries that had less water access than in the previous year. This calculation is easy for software and hard for humans to calculate and should therefore become part of the visualisation.</p><p>A challenge on the technical side was to constantly listen to the Arduino input and update the website in realtime. I eventually solved this by making use of WebSockets. Additionally, I learned how to use the data visualisation library <a href="http://d3js.org/">D3.js</a>. For more development specific details have a look at my <a href="https://github.com/weidenfreak/InteractiveAfricaMapD3Arduino">GitHub repository.</a></p><h3>Reflections</h3><p>This project was a very small one, but I was still able to prototype some aspects of embodied interaction. People found it fascinating to use an alternative input device for a web application and found it interesting to feel the borders of the year range in form of  physical feedback.</p><p>Although this was a project which primarily focused on prototyping instead of the design process I wondered in hindsight if it would have been possible to work towards a more meaningful visualisation from the beginning.</p>
+description: <h3>Challenge</h3><p>This project was an individual university project in which I worked with data from the <a href="http://www.worldbank.org/">World Bank</a>. The World Bank provides Open Data about the development of the world but the data is not very accessible and understandable. So the task was to focus on a certain aspect of the data, create a more accessible representation and also incorporate the ideas of embodied interaction.</p><h3>Concept</h3><p>I decided to design an artifact for a fictitious museum environment with a broader topic about for example water or Africa. My idea was to create a map that would show the percentage of people having access to water in rural areas for each country in Africa. As museums typically have a wide range of visitors, from small kids to seniors, the input device had to be very easy and intuitive to interact with. As the input device I therefore aimed to use a physical slider with which users would be able to navigate through each year and explore the development over time.</p><h3>Result</h3> <p>Unfortunatly I couldn't get a slider so I had to work with a turning knob instead. A quick demonstration of the result can be seen in the following video. </p><p> <div class="flex-video widescreen"><iframe src="https://www.youtube.com/embed/2jrZv-j7q3I" frameborder="0" allowfullscreen=""></iframe></div></p><p>A <a href="http://weidenfreak.github.io/InteractiveAfricaMapD3/"> live version</a> is also available but it doesn't have Arduino support and is optimised for Google Chrome only.</p><h3>Process</h3><p>The prototype was developed in several iterations. During the development I did small evaluations in which I led my users explore the prototype and encouraged them to give feedback. One minor finding was for example, that while using the turning knob the users lost the focus on the year range in the bottom. I therefore additionally included the current year above the map as shown in this screenshot:</p><img src="img/portfolio/africa_map.png" class="img-responsive img-thumbnail img-centered" alt="Africa_Map Screen"><p>Later on I found through the evaluations that people immediately started to try to identify which countries were constantly improving and which were not. In the chosen map visualisation this is hard to keep track of because of the large number of countries. A therefore useful improvement would have been to add for example a list with countries that had less water access than in the previous year. This calculation is easy for software and hard for humans to calculate and should therefore become part of the visualisation.</p><p>A challenge on the technical side was to constantly listen to the Arduino input and update the website in realtime. I eventually solved this by making use of WebSockets. Additionally, I learned how to use the data visualisation library <a href="http://d3js.org/">D3.js</a>. For more development specific details have a look at my <a href="https://github.com/weidenfreak/InteractiveAfricaMapD3Arduino">GitHub repository.</a></p><h3>Reflections</h3><p>This project was a very small one, but I was still able to prototype some aspects of embodied interaction. People found it fascinating to use an alternative input device for a web application and found it interesting to feel the borders of the year range in form of  physical feedback.</p>
 
 ---
