--- a/_posts/2014-07-11-project-1.markdown
+++ b/_posts/2014-07-11-project-1.markdown
@@ -44,4 +44,4 @@ focus: Human-centred Design
 <p>Our final prototype was developed well enough to conduct a user experience evaluation. Our test users were asked to freely explore the application and we observed them quietly. Afterwards we interviewed them about their experience with a combination of closed-ended and open-ended questions.</p>
 <p>Our results indicated that most of our users found the fun factor of the game "ok", which was a reasonable result, considering that we could not implement all gamification elements. Another interesting finding was that regular gamers did not care about the fact that they were helping Wikimedia by playing this game. Non-gamers, on the other hand we encouraged by the fact of knowing that they help Wikimedia.</p>
 <h3>Reflections</h3>
-<p>The iterative process of developing prototypes and evaluating them helped us to discover problems early. However, I wish we would have spent more time learning about potential users initially and created personas instead of jumping to a concept too quickly. But in the end the representatives of Wikimedia Sweden were pleased by our results.</p>
+<p>The iterative process of developing prototypes and evaluating them helped us to discover problems early. However, I wish we would have spent more time learning about potential users initially and created personas instead of jumping to a concept too quickly. But in the end the representatives of Wikimedia Sweden were pleased by our results.
