--- a/_posts/2014-07-13-project-2.markdown
+++ b/_posts/2014-07-13-project-2.markdown
@@ -29,5 +29,5 @@ focus: Prototyping
 <p>Later on I found through the evaluations that people immediately started to try to identify which countries were constantly improving and which were not. In the chosen map visualisation this is hard to keep track of because of the large number of countries. A therefore useful improvement would have been to add for example a list with countries that had less water access than in the previous year. This calculation is easy for software and hard for humans to calculate and should therefore become part of the visualisation.</p>
 <p>A challenge on the technical side was to constantly listen to the Arduino input and update the website in realtime. I eventually solved this by making use of WebSockets. Additionally, I learned how to use the data visualisation library <a href="http://d3js.org/">D3.js</a>. For more development specific details have a look at my <a href="https://github.com/weidenfreak/InteractiveAfricaMapD3Arduino">GitHub repository.</a></p>
 <h3>Reflections</h3>
-<p>This project was a very small one, but I was still able to prototype some aspects of embodied interaction. People found it fascinating to use an alternative input device for a web application and found it interesting to feel the borders of the year range in form of  physical feedback.</p>
+<p>This project was a very small one, but I was still able to prototype some aspects of embodied interaction. People found it fascinating to use an alternative input device for a web application and found it interesting to feel the borders of the year range in form of  physical feedback.
 ---
