--- a/_posts/2014-07-11-project-1.markdown
+++ b/_posts/2014-07-11-project-1.markdown
@@ -30,16 +30,16 @@ focus: Human-centred Design
 <p>We developed our prototype in three iterations, each of it with a new prototype and a suitable evaluation method.</p>
 <h4>Paper Prototype</h4>
 <p>The first prototype was built by my team members with <a href="https://balsamiq.com/">Balsamiq</a> and the screens were printed out for our first evaluation. Some sample screens:</p>
-<p><img src="img/portfolio/wikimedia/balsamiq_login.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Login Screen"><img src="img/portfolio/wikimedia/balsamiq_menu.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Menu Screen"><img src="img/portfolio/wikimedia/balsamiq_gamescreen.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Game Screen"></p>
+<img src="img/portfolio/wikimedia/balsamiq_login.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Login Screen"><img src="img/portfolio/wikimedia/balsamiq_menu.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Menu Screen"><img src="img/portfolio/wikimedia/balsamiq_gamescreen.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Balsamiq Game Screen">
 <p>In addition to the Balsamiq screens we used printed pictures from the Wikimedia database and sticky notes to make the paper prototype appear interactive.</p>
 <p>With the paper prototype we aimed to collect first feedback about our idea. Potential future users were presented with the paper prototype and we discussed our idea in an informal, unstructured session. Having a paper protoype at this step in the design process was important to present our idea in a clear way. The prototype was also looking unfinished enough to give test users the impressions that any changes they would suggest could be easily implemented.</p>
 <h4>Screens Prototype</h4>
 <p>The next step was a more detailed screen design made by my team members. The screens incorporated feedback from the previous evaluation like for a example a possibility to play in teams.</p>
-<p><img src="img/portfolio/wikimedia/screen_menu.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Menu Screen"><img src="img/portfolio/wikimedia/screen_choose_tags.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Choose Tags Screen"><img src="img/portfolio/wikimedia/screen_tagmode.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Game Screen TagMode"></p>
-<p>Those screens were used for a usability evaluation conducted as a cognitive walkthrough with scenarios. In this evaluation we discovered for example the lack of affordance of image tags in the game which initially looked like buttons one could click instead of draggable tags. </p>
+<img src="img/portfolio/wikimedia/screen_menu.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Menu Screen"><img src="img/portfolio/wikimedia/screen_choose_tags.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Choose Tags Screen"><img src="img/portfolio/wikimedia/screen_tagmode.png" class="img-responsive img-thumbnail img-mobilescreen img-centered" alt="Game Screen TagMode">
+<p>Those screens were used for a usability evaluation conducted as a cognitive walkthrough with scenarios. In this evaluation we discovered for example the lack of affordance of image tags in the game which initially looked like buttons one could click instead of draggable tags.</p>
 <h4>Axure/Javascript Prototype</h4>
-<p>The final prototype was build by me and another group member. We started out by trying to build the whole application with <a href="http://www.axure.com/">Axure</a> but we quickly realized that Axure is not the best choice for building games. Therefore we implemented the game part of the application in Javascript. The rest of the application was build in Axure and was based on the screen design made by our team members. It was not visible for the users that they were dealing with two separate applications.
+<p>The final prototype was build by me and another group member. We started out by trying to build the whole application with <a href="http://www.axure.com/">Axure</a> but we quickly realized that Axure is not the best choice for building games. Therefore we implemented the game part of the application in Javascript. The rest of the application was build in Axure and was based on the screen design made by our team members. It was not visible for the users that they were dealing with two separate applications.</p>
 <p>Our final prototype was developed well enough to conduct a user experience evaluation. Our test users were asked to freely explore the application and we observed them quietly. Afterwards we interviewed them about their experience with a combination of closed-ended and open-ended questions.</p>
 <p>Our results indicated that most of our users found the fun factor of the game "ok", which was a reasonable result, considering that we could not implement all gamification elements. Another interesting finding was that regular gamers did not care about the fact that they were helping Wikimedia by playing this game. Non-gamers, on the other hand we encouraged by the fact of knowing that they help Wikimedia.</p>
 <h3>Reflections</h3>
-<p>The iterative process of developing prototypes and evaluating them helped us to discover problems early. However, I wish we would have spent more time learning about potential users initially and created personas instead of jumping to a concept too quickly. But in the end the representatives of Wikimedia Sweden were pleased by our results.
+<p>The iterative process of developing prototypes and evaluating them helped us to discover problems early. However, I wish we would have spent more time learning about potential users initially and created personas instead of jumping to a concept too quickly. But in the end the representatives of Wikimedia Sweden were pleased by our results.</p>
