--- a/_posts/2014-07-11-project-1.markdown
+++ b/_posts/2014-07-11-project-1.markdown
@@ -7,7 +7,7 @@ title: Mobile App Design for Wikimedia
 date: 2014-07-15
 img: wikimedia.jpg
 alt: whiteboard-sketches
-project-length: 10 Weeks (part time)
+project-length: 10 weeks (part time)
 project-date: Winter 2014
 group: Marcel, Luis, Adam, Dennis
 focus: Human-centred Design
