add introduction to thesis

--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -18,6 +18,22 @@ focus: "Thesis: UX and Ubiquitous Computing"
 <p>When looking at the Internet of Things the question arises how people, places and things will be connected to each other in the future. One option to create interoperability between devices and humans for the Internet of Things is to use open web standards. Researchers have named this approach the Web of Things and have studied the vision by showing the technical feasibility and by suggesting software architectures. </p>
 <p>What has been missing so far is a designer’s view on the challenges of connecting the virtual and the physical world with web technology. This thesis therefore aims to explore how current web technologies can be used as design material for the Web of Things. The results indicate that new web technologies like push notifications work well in the context of ubiquitous computing. </p>
 <p>Additionally, the repertory grid method was applied to evaluate how users experience the Web of Things. It was found that the prototypes were perceived as easy to use, personal and working instantly but the participants were also clearly aware of the dependency on a working smartphone.</p>
+<h3>Introduction</h3>
+<p>The Internet of Things has become more and more popular in recent years and is expected to grow heavily in the upcoming years (Gartner, 2013). While more and more devices are becoming connected to the Internet it is exciting to see how those devices will be connected to each other and especially how users will interact with them. </p>
+<p>One idea to integrate physical objects in the digital world and vice versa is to build a network based on the web which would be easily accessible for users but also for developers. Some use cases for the Web of Things (WoT) have been presented like for example a guiding system at a conference, public transport information or smart parking meters (Barton & Kindberg, 2001; Google, 2015). However, the prototypes built so far have been focused on demonstrating the technical feasibility and measuring performance. Before designers can effectively explore this area it is important to understand the potentials and constraints for the Web of Things additionally from a different perspective. </p>
+<p>In HCI, researchers have recognized the trend of the digital moving into the physical world. In a panel discussion at CHI 2012 (Wiberg et al., 2013) the participants highlighted consequently that when designing for a combination between the digital and physical world it is becoming of great importance to start thinking of computing as design material. Understanding computing as design material is essential because it determines how people experience the designed artifacts and eventually even how they experience the world. </p>
+<p>A materiality or user experience perspective on the Internet of Things has so far been applied in various studies in the area of discoverability with NFC, Bluetooth or QR-codes. (Sundström, Taylor, & O’Hara, 2011; Shin, Jung, & Chang, 2012; Meschtscherjakov, Gschwendtner, Tscheligi, & Sundström, 2013). I want to take this view one step further and look beyond the discovery process and instead look into what kind of current web technologies could be used to create meaningful digital interactions within the physical world. </p>
+<p>For this thesis I have chosen Bluetooth Low Energy (BLE) beacons as the technology to make devices discoverable because Bluetooth is built into every modern smartphone and is currently named as the most promising technology for device tagging (Want, Schilit, & Jenson, 2015). Ready-made BLE beacons that broadcast URLs can be bought and a smartphone application from Google is available to discover broadcasted URLs (Google, 2015). </p>
+<p>Based on the BLE beacons and the smartphone app for discovery, two prototypes were built to explore the materiality of current web technology for the WoT from a designer’s perspective. When studying material from the physical world one can touch, maybe form and sense it. That is however difficult when looking at computing as design material. By building prototypes that make the Web of Things technology graspable I aim to find out more about the material properties of this technology. The prototypes address certain use cases that people are facing today and could possibly be improved by combining the physical and digital world and providing context-sensitive information and interaction. The prototypes are being evaluated with the repertory grid method to gain insights into the material properties of the WoT. So, my research questions is as follows: </p>
+<p><i>“What are the material properties of the Web of Things and how do they influence the user experience in public spaces?” </i></p>
+<p>This thesis aims to make the following contributions: </p>
+<ul>
+<li>Generate insights into how current web technologies can be used to create interactive
+experiences for the Web of Things. (Chapter 4)</li>
+<li>How do users experience the materiality of the Web of Things? (Chapter 6.2)</li>
+<li>Discover design-relevant information for the Web of Things. (Chapter 7)</li>
+</ul>
+<p>By exploring the materiality of the Web of Things I aim to contribute to a discussion about how to bring the web into the physical world and help to create an environment in which humans can communicate with devices around them easily and instantly. Not parts of this study are aspects that will need to be addressed in the future like security and privacy issues.</p>
 <h3>Full Thesis</h3>
 <p>If you're interested in reading further you can download the <a href="http://umu.diva-portal.org/smash/record.jsf?pid=diva2%3A821753&dswid=-4659">full thesis</a> on the university's website.</p>
 <h3>Conference Talk</h3>
